# D3OS-NE2000

./: .gitignore  Cargo.toml  Makefile.toml  README.md  client.py  nettest.py  qemu-pci.sh  server.py  udp_visualization.csv  visualize_udp_stats.py
os/application/nettest/: Cargo.toml  README.md
os/application/nettest/src/: banner.txt  nettest.rs
os/kernel/: Cargo.toml
results/: nettest_benchmark_2025-09-06 20:45:59.txt  nettest_benchmark_2025-09-06 20:46:41.txt  nettest_benchmark_2025-09-06 20:47:23.txt  nettest_benchmark_2025-09-06 20:48:01.txt  nettest_benchmark_2025-09-06 20:49:14.txt  nettest_benchmark_2025-09-06 20:51:13.txt  nettest_benchmark_2025-09-06 20:56:55.txt  nettest_benchmark_2025-09-06 20:59:47.txt  nettest_benchmark_2025-09-06 21:01:20.txt  nettest_benchmark_2025-09-06 21:02:55.txt  nettest_benchmark_2025-09-06 21:04:36.txt  nettest_benchmark_2025-09-12 15:07:36.txt  nettest_benchmark_2025-09-12 15:09:51.txt  nettest_benchmark_2025-09-12 15:11:34.txt  nettest_benchmark_2025-09-14 20:08:47.txt  nettest_benchmark_2025-09-14 20:12:51.txt  nettest_benchmark_2025-09-14 20:22:00.txt  nettest_benchmark_2025-09-14 20:35:10.txt
results/kernel_tests_transmit_after_rm_scheduler/: nettest_benchmark_2025-09-04 02:41:19_64.txt  nettest_benchmark_2025-09-04 02:46:28_256.txt  nettest_benchmark_2025-09-04 02:47:17_512.txt  nettest_benchmark_2025-09-04 02:48:51_1450.txt
results/kernel_tests_transmit_before_rm_scheduler/: nettest_benchmark_2025-09-04 02:22:03_64.txt  nettest_benchmark_2025-09-04 02:26:44_128.txt  nettest_benchmark_2025-09-04 02:28:27_256.txt  (+3 more)
(+185 files in other folders)
